@@ -81,6 +81,8 @@ Version 1.7
 
 - CSS lexer: some highlighting order fixes (PR#231).
 
+- Ceylon lexer: fix parsing of nested multiline comments (#915).
+
 
 Version 1.6
 -----------
